[project]
require_python = ">=3.10,<3.13"

[tool.poetry]
name = "asynccasbin"
version = "1.36.3"
description = "AsyncCasbin adapted from PyCasbin, which supports access control models like ACL, RBAC, ABAC in Python"
authors = [
    "Manoj Chapagain <chapagainmanoj35@gmail.com>",
    "Kevin Chen <kevin_tl_chen@hotmail.com>"
]
maintainers = ["Kevin Chen <kevin_tl_chen@hotmail.com>"]
license = "This project is licensed under the Apache 2.0 license."
homepage = "https://github.com/KevinTLChen/asynccasbin"
repository = "https://github.com/KevinTLChen/asynccasbin"
readme = "README.md"
keywords = [
    "casbin",
    "acl",
    "rbac",
    "abac",
    "auth",
    "authz",
    "authorization",
    "access control",
    "permission"
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
packages = [
    { include = "casbin" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
asyncio = "^3.4.3"
simpleeval = "^0.9.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-benchmark = "^4.0.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
